--- a/passive_dns.cfg
+++ b/passive_dns.cfg
@@ -1,5 +1,5 @@
 INTERFACE="eth0"
-DATADIR="/var/captures/dns/"
+DATADIR="/var/lib/passivedns/"
 SERVER_BIND="0.0.0.0"
 SERVER_PORT=7084
 SERVER="http://whereever:7084"
